# shaengine_sdl

./: .gitignore  CMakeLists.txt  Makefile  README.md  helloShae  helloShae.c  shaegine  shaegine.c
sprite/: sprite.c  sprite.h
src/: aapi.c  aapi.h  main.c  main.h
